--- a/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
+++ b/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
@@ -195,7 +195,7 @@
                                      aria-label="Basic outlined example">
                                     <a th:text="${hd.maHoaDon}"
                                        th:href="@{'/ban-hang-tai-quay/hoa-don/' + ${hd.id}}"
-                                       class="btn btn-outline-primary"></a>
+                                       th:class="${hd.id == hoaDon.id ? 'btn btn-outline-primary active' : 'btn btn-outline-primary'}"></a>
                                 </div>
                             </div>
                         </div>
