--- a/src/main/resources/templates/admin-template/nhan_vien/sua-nhan-vien.html
+++ b/src/main/resources/templates/admin-template/nhan_vien/sua-nhan-vien.html
@@ -138,6 +138,7 @@
         <span>Quản Lý Hóa Đơn</span>
       </a>
     </li><!-- End Forms Nav -->
+
     <li class="nav-item">
       <a class="nav-link" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
         <i class="bi bi-person-vcard"></i><span>Quản Lý Tài Khoản</span><i
@@ -145,12 +146,12 @@
       </a>
       <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
         <li>
-          <a href="/admin/nhan-vien" class="active">
+          <a href="/admin/nhan-vien"  class="active">
             <i class="bi bi-circle"></i><span>Quản lý nhân viên</span>
           </a>
         </li>
         <li>
-          <a href="/admin/khach-hang">
+          <a href="/admin/khach-hang" >
             <i class="bi bi-circle"></i><span>Quản lý khách hàng</span>
           </a>
         </li>
@@ -158,7 +159,7 @@
     </li><!-- End Tables Nav -->
 
     <li class="nav-item">
-      <a class="nav-link collapsed" href="/admin/voucher">
+      <a class="nav-link collapsed" href="../admin/voucher">
         <i class="bi bi-ticket-perforated-fill"></i>
         <span>Quản Lý Voucher</span>
       </a>
