--- a/src/main/resources/templates/admin-template/san_pham/sua-san-pham.html
+++ b/src/main/resources/templates/admin-template/san_pham/sua-san-pham.html
@@ -55,18 +55,18 @@
     </li><!-- End Dashboard Nav -->
 
     <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+      <a class="nav-link " data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
         <i class="bi bi-menu-button-wide"></i><span>Quản Lý Sản Phẩm</span><i
               class="bi bi-chevron-down ms-auto"></i>
       </a>
-      <ul id="components-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+      <ul id="components-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
         <li>
           <a href="/admin/san-pham-chi-tiet">
             <i class="bi bi-circle"></i><span>Sản Phẩm Chi Tiết</span>
           </a>
         </li>
         <li>
-          <a href="/admin/san-pham">
+          <a href="/admin/san-pham" class="active">
             <i class="bi bi-circle"></i><span>Sản Phẩm</span>
           </a>
         </li>
@@ -81,7 +81,7 @@
           </a>
         </li>
         <li>
-          <a href="/admin/mau-sac">
+          <a href="/admin/mau-sac" >
             <i class="bi bi-circle"></i><span>Màu Sắc</span>
           </a>
         </li>
@@ -100,19 +100,20 @@
       </a>
     </li><!-- End Forms Nav -->
 
+
     <li class="nav-item">
-      <a class="nav-link" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
+      <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
         <i class="bi bi-person-vcard"></i><span>Quản Lý Tài Khoản</span><i
               class="bi bi-chevron-down ms-auto"></i>
       </a>
-      <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
+      <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
         <li>
-          <a href="/admin/nhan-vien">
+          <a href="/admin/nhan-vien" >
             <i class="bi bi-circle"></i><span>Quản lý nhân viên</span>
           </a>
         </li>
         <li>
-          <a href="/admin/khach-hang" class="active">
+          <a href="/admin/khach-hang">
             <i class="bi bi-circle"></i><span>Quản lý khách hàng</span>
           </a>
         </li>
@@ -120,7 +121,7 @@
     </li><!-- End Tables Nav -->
 
     <li class="nav-item">
-      <a class="nav-link collapsed" href="../admin/voucher">
+      <a class="nav-link collapsed" href="/admin/voucher">
         <i class="bi bi-ticket-perforated-fill"></i>
         <span>Quản Lý Voucher</span>
       </a>
