--- a/src/main/resources/templates/admin-template/nhan_vien/nhan-vien.html
+++ b/src/main/resources/templates/admin-template/nhan_vien/nhan-vien.html
@@ -165,17 +165,18 @@
             </a>
             <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="/admin/nhan-vien">
+                    <a href="/admin/nhan-vien"  class="active">
                         <i class="bi bi-circle"></i><span>Quản lý nhân viên</span>
                     </a>
                 </li>
                 <li>
-                    <a href="/admin/khach-hang" class="active">
+                    <a href="/admin/khach-hang" >
                         <i class="bi bi-circle"></i><span>Quản lý khách hàng</span>
                     </a>
                 </li>
             </ul>
         </li><!-- End Tables Nav -->
+
         <li class="nav-item">
             <a class="nav-link collapsed" href="../admin/voucher">
                 <i class="bi bi-ticket-perforated-fill"></i>
