--- a/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
+++ b/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
@@ -1723,7 +1723,10 @@
                                                 <label class="form-label">Kích thước:</label>
                                                 <select class="form-select" id="filterKichThuoc">
                                                     <option value="">Tất cả</option>
-                                                    <option th:each="kich : ${#lists.sort(#sets.toSet(listCtsp.![kichCo.ten]))}" th:value="${kich}" th:text="${kich}"></option>
+                                                    <option th:each="kich : ${#lists.sort(#sets.toSet(listCtsp.![kichCo.ten]))}" 
+                                                            th:value="${kich}" 
+                                                            th:text="${kich}">
+                                                    </option>
                                                 </select>
                                             </div>
                                             <div class="col-md-3">
