--- a/src/main/resources/templates/admin-template/san_pham/san-pham.html
+++ b/src/main/resources/templates/admin-template/san_pham/san-pham.html
@@ -204,11 +204,11 @@
                                         <div class="modal-body">
                                             <div class="row mb-3" style="margin-top: 3%;">
                                                 <label for="themSanPham" class="col-sm-4 col-form-label"><span
-                                                        style="color: red;">*</span>Sản
+                                                        style="color: red;">*</span>Tên Sản
                                                     Phẩm</label>
                                                 <div class="col-sm-8">
                                                     <input type="text" class="form-control" id="themSanPham"
-                                                           placeholder="Nhập Sản Phẩm" th:field="*{ten}">
+                                                           placeholder="Nhập Tên Sản Phẩm" th:field="*{ten}">
                                                     <span class="check-loi" th:errors="*{ten}"></span>
                                                     <span class="check-loi" th:text="${checkTenTrung}"></span>
 
