--- a/src/main/resources/templates/customer-template/shop.html
+++ b/src/main/resources/templates/customer-template/shop.html
@@ -163,7 +163,6 @@
           <li><a href="/about">Về chúng tôi</a></li>
           <li><a href="/lien-he">Liên hệ</a></li>
           <li><a href="/chinh-sach">Chính Sách</a></li>
-          <li><a href="/tra-cuu-don-hang">Tra Cứu Đơn Hàng</a></li>
         </ul>
       </div>
     </nav>
@@ -623,7 +622,7 @@
                     <h3 class="product-title"
                         th:text="${chiTiepSp.sanPham.ten+' ['+chiTiepSp.mauSac.ten+ ' - ' +chiTiepSp.kichCo.ten}+']'"></h3>
                     <strong class="product-price"
-                            th:text="${chiTiepSp.giaHienHanh + ' VNĐ'}"></strong>
+                            th:text="${#numbers.formatDecimal(chiTiepSp.giaHienHanh, 0, 'POINT', 0, 'POINT') + ' VNĐ'}"></strong>
                     <span class="icon-cross">
 							                 <img src="../../static/img/plus-black.png" class="img-fluid">
 						                </span>
@@ -875,10 +874,10 @@
         <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
           <h3 class="footer-heading mb-4">Mẫu mã</h3>
           <a href="/shop" class="block-6">
-            <img src="../../static/img/hero_1.jpg" alt="Image placeholder"
+            <img src="../../static/img/ImgShoe/vn-11134207-7r98o-lslkgewn8nno79.jpg" alt="Image placeholder"
                  class="img-fluid rounded mb-4"/>
             <h3 class="font-weight-light mb-0">
-              Tìm đôi giày hoàn hảo của bạn
+              Tìm chiếc áo hoàn hảo của bạn
             </h3>
           </a>
         </div>
